# ouril

./: .gitignore  CMakeLists.txt  main.cc
include/: renderer.h
src/: renderer.cc
